--- a/wp/Dockerfile
+++ b/wp/Dockerfile
@@ -2,7 +2,8 @@ FROM ubuntu:14.04
         RUN apt-get update
         EXPOSE 80
         COPY entrypoint.sh /entrypoint.sh
-        COPY wordpress-4.5.2.tar.gz /opt/wordpress-4.5.2.tar.gz
+        #COPY wordpress-4.5.2.tar.gz /opt/wordpress-4.5.2.tar.gz
+        COPY wordpress.zip /opt/wordpress.zip
         RUN chmod 777 /entrypoint.sh
         RUN /entrypoint.sh
         #RUN tar xzvf /opt/wordpress-4.5.2.tar.gz
