--- a/wp/Dockerfile
+++ b/wp/Dockerfile
@@ -23,6 +23,11 @@ FROM ubuntu:14.04
         ENV APACHE_RUN_USER www-data
 	ENV APACHE_RUN_GROUP www-data
 	ENV APACHE_LOG_DIR /var/log/apache2
+	env APACHE_PID_FILE    /var/run/apache2.pid
+	env APACHE_RUN_DIR     /var/run/apache2
+	env APACHE_LOCK_DIR    /var/lock/apache2
+	env LANG               C
+
 	
 	CMD ["/usr/sbin/apache2", "-D", "FOREGROUND"]
 
