--- a/wp/Dockerfile
+++ b/wp/Dockerfile
@@ -3,16 +3,16 @@ FROM ubuntu:14.04
         EXPOSE 80
         COPY ./wp/entrypoint.sh /entrypoint.sh
         #COPY wordpress-4.5.2.tar.gz /opt/wordpress-4.5.2.tar.gz
-        COPY wordpress.zip /opt/wordpress.zip
+        COPY ./wp/wordpress.zip /opt/wordpress.zip
         RUN chmod 777 /entrypoint.sh
         RUN /entrypoint.sh
         #RUN tar xzvf /opt/wordpress-4.5.2.tar.gz
-        COPY untar.sh /untar.sh
+        COPY ./wp/untar.sh /untar.sh
 	RUN chmod 777 /untar.sh
 	RUN /untar.sh
 	
         #RUN cp /opt/wordpress/wp-config-sample.php /opt/wordpress/wp-config.php
-        COPY rename_configfile.sh /rename_configfile.sh
+        COPY ./wp/rename_configfile.sh /rename_configfile.sh
         RUN chmod 777 /rename_configfile.sh
         #RUN /rename_configfile.sh
         
